# ModernCppChallengeStudy

./: .gitmodules  .travis.yml  CMakeLists.txt  Guide.md  LICENSE  README.md  appveyor.yml
Language/: CMakeLists.txt
Math/Problem02/: CMakeLists.txt
Math/Problem08/: main.cpp
Math/Problem1/: main.cpp
Math/Problem2/: main.cpp
Math/Problem3/: CMakeLists.txt
Math/Problem8/: main.cpp
Networking/Problem95/: CMakeLists.txt
Scripts/: GetModules.cmake  linux-build.sh  mac-build.sh  mac-setup.sh  run-test.ps1  run-test.sh  win-build.ps1
