
cmake_minimum_required(VERSION 3.1)

project(ModernCppChallenge LANGUAGES CXX)

add_subdirectory(Math)          # Ch.1 
add_subdirectory(Language)      # Ch.2
add_subdirectory(Regex)         # Ch.3
add_subdirectory(Filesystem)    # Ch.4
add_subdirectory(DateTime)      # Ch.5
add_subdirectory(Algorithm)     # Ch.6
add_subdirectory(Concurrency)   # Ch.7
add_subdirectory(Serialization) # Ch.9
add_subdirectory(DesignPattern) # Ch.8
add_subdirectory(Database)      # Ch.10
add_subdirectory(Images)        # 
add_subdirectory(Cryptography)  # Ch.11

